modification et insertion de quelques images

--- a/Nosprojets.html
+++ b/Nosprojets.html
@@ -129,12 +129,12 @@
             <div class="action-box">
                 <div class="row g-0">
                     <div class="col-md-6">
-                        <img src="images/visite camp penel.jpeg" class="action-image" alt="Soutien aux femmes">
+                        <img src="images/collecte money.jpg" class="action-image" alt="Soutien aux femmes">
                     </div>
                     <div class="col-md-6">
                         <div class="action-content">
                             <p class="action-text">
-                                Grâce à la mobilisation de nos donateurs et partenaires, nous avons réussi à collecter des fonds destinés à soutenir les femmes en situation de précarité. Cette aide financière leur a permis de couvrir des besoins essentiels tels que la santé, l’alimentation, ou encore l’éducation de leurs enfants. Au-delà de l’aspect matériel, ce soutien représente un véritable levier d’autonomisation et d’espoir pour ces femmes qui luttent chaque jour pour offrir une vie meilleure à leur famille.
+                                Grâce à la mobilisation des bonnes volontes, nous avons réussi à collecter des fonds destinés à soutenir les femmes en situation de précarité. Cette aide financière leur a permis de couvrir des besoins essentiels tels que la santé, l’alimentation, ou encore l’éducation de leurs enfants. 
                                 </p>
                         </div>
                     </div>
@@ -152,7 +152,7 @@
                         <div class="green-section h-100 d-flex flex-column justify-content-center">
                             <h3 class="green-title">Organisation de dons de sang</h3>
                             <p class="green-text">
-                              En partenariat avec plusieurs structures sanitaires locales, nous avons mis en place des campagnes régulières de don de sang. Ces initiatives ont permis de mobiliser de nombreux volontaires et de collecter des centaines de poches de sang, essentielles pour les hôpitaux et les patients dans le besoin. Au-delà de l’aspect médical, ces campagnes ont renforcé l’esprit de solidarité au sein de la communauté, en rappelant que chaque don peut sauver une vie et incarner un véritable acte de fraternité.
+                              En partenariat avec plusieurs structures sanitaires locales, nous avons mis en place des campagnes régulières de don de sang. Ces initiatives ont permis de mobiliser de nombreux volontaires et de collecter des centaines de poches de sang, essentielles pour les hôpitaux et les patients dans le besoin.
                               </p>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
                     <div class="col-md-6">
                         <div class="action-content">
                             <p class="action-text">
-                               Afin de favoriser l’égalité des chances dès le plus jeune âge, nous avons lancé une collecte solidaire de kits scolaires à destination des enfants issus de milieux défavorisés. Grâce à la générosité de nos donateurs et à l’engagement de nos bénévoles, des centaines d’élèves ont pu recevoir des fournitures complètes leur permettant d’aborder l’année scolaire avec confiance et dignité. Cette action vise à lutter contre l’exclusion scolaire et à encourager chaque enfant à croire en son potentiel, quelle que soit sa situation.
+                               Afin de favoriser l’égalité des chances dès le plus jeune âge, nous avons lancé une collecte solidaire de kits scolaires à destination des enfants issus de milieux défavorisés. Grâce à la générosité de nos donateurs et à l’engagement de nos bénévoles, des centaines d’élèves ont pu recevoir des fournitures complètes leur permettant d’aborder l’année scolaire avec confiance et dignité. 
                                </p>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                         <div class="green-section h-100 d-flex flex-column justify-content-center">
                             <h3 class="green-title">Distribution de ndogou pendant le Ramadan</h3>
                             <p class="green-text">
-                               Durant le mois sacré du Ramadan, nous avons mis en place une opération de distribution de repas de ndogou à destination des familles démunies. Grâce à la solidarité de nos donateurs et à l’implication de nos bénévoles, des centaines de repas ont été partagés chaque soir, apportant réconfort, dignité et chaleur humaine à ceux qui traversent des situations difficiles. Ce geste symbolique incarne l’esprit de partage et de fraternité qui anime notre engagement.
+                               Durant ce mois, nous avons mis en place une opération de distribution de repas à destination des familles démunies.Ce geste symbolique incarne l’esprit de partage et de fraternité qui anime notre engagement.
                                </p>
                         </div>
                     </div>
@@ -215,7 +215,7 @@
                     <div class="col-md-6">
                         <div class="action-content">
                             <p class="action-text">
-                              Grâce au soutien indéfectible de nos généreux donateurs et à la mobilisation constante de nos équipes bénévoles, nous avons pu mettre en place une vaste opération de distribution de denrées alimentaires. Cette initiative a permis à de nombreuses familles en situation de précarité de subvenir à leurs besoins essentiels. Elle a apporté non seulement une aide matérielle concrète, mais aussi un véritable réconfort moral, leur redonnant espoir et dignité dans un quotidien souvent marqué par l'incertitude et les privations.
+                              Grâce au soutien indéfectible de nos généreux donateurs et à la mobilisation constante de nos équipes bénévoles, nous avons pu mettre en place une vaste opération de distribution de denrées alimentaires. Cette initiative a permis à de nombreuses familles en situation de précarité de subvenir à leurs besoins essentiels.
                               </p>
                         </div>
                     </div>
@@ -258,7 +258,7 @@
 
         <div class="row foot" style="background-color: #ff7f00;height: 200px;">
             <div class="col">
-                <img src="images/don-du-coeur.jpg" alt="" class="logo-footer">
+                <img src="images/don-du-coeur.jpeg.jpeg" alt="" class="logo-footer">
                 <p class="texte-footer">Notre equipe s’engage à vous apporter leurs plus grand soutien chaque demande
                     sera traitée avec attention, confidentialité et humanité.</p>
             </div>
@@ -279,12 +279,14 @@
                 <p class="p-footer">+221 33 900 00 00</p>
                 <p class="p-footer">donducoeur@gmail.com</p>
                 <h4>Suivez nous sur</h4>
+            <img src="images/icone-sociaux_Plan de travail 1.jpg" alt="">
             </div> 
         </div>
         <div class="footer-bottom" style="background-color: #ff7f00;">
             <div class="col text-center">
                 <p class="text-center">© 2025 Don du Coeur. Tous droits réservés.</p>
             </div>
+            
     </footer>
     
 </body>
