Création de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -27,20 +27,19 @@
             <h1 class="display-5 fw-bold text-orange">Bienvenue sur Don Du Coeur</h1>
             <p class="lead">Ensemble, semons la solidarité et récoltons l'espoir.</p>
             <div class="container position-relative z-2">
-            <div class="row justify-content-center mt-5 g-4">
-                <div class="col-md-3 stat-box">
+            <div class="row justify-content-center g-0 stat-row">
+                <div class="col-md-3 stat-box step-1 text-center">
                     <h3 class="fw-bold">+85</h3>
                     <p>donations</p>
                 </div>
-            </div>
-             <div class="col-md-3 stat-box">
-                <h3 class="fw-bold">+50</h3>
-                <p>projets réalisés</p>
-             </div>
-              <div class="col-md-3 stat-box">
-                <h3 class="fw-bold">+36</h3>
-                <p>volontaires</p>
-            </div>
+                <div class="col-md-3 stat-box  step-2 text-center">
+                  <h3 class="fw-bold">+50</h3>
+                  <p>projets réalisés</p>
+                </div>
+                <div class="col-md-3 stat-box  step-3 text-center">
+                  <h3 class="fw-bold">+36</h3>
+                  <p>volontaires</p>
+               </div>
             </div>
         </div>
     </section>
