mettre en euvre nos valeur comme la solidarite taransparence engagemment innovation qussi que nos actions marquants comme Collectes d'argent Dons de sang solidaires Distribution de ndogou (Ramadan)

--- a/page-a-propos.html
+++ b/page-a-propos.html
@@ -29,19 +29,28 @@
     </section>
     <section class="apropos">
         <p>
-        </strong> Fondée en 2025, Don du Cœur est une fondation engagée dans l’action sociale et solidaire.
-            Notre mission : venir en aide aux plus démunis, semer l’espoir et agir concrètement pour un avenir plus juste et humain.<br>
-            Portée par des bénévoles dévoués et des partenaires engagés, Don du Cœur agit sur le terrain, au plus près des besoins réels.<br>
-            Grâce à votre soutien, nous transformons chaque don en action et chaque geste en impact positif.
+        <strong><p>Fondée en 2025, Don du Cœur est une fondation née d’un élan de solidarité et d’un profond désir de justice sociale. Consciente des inégalités qui persistent dans notre société, elle s’est donnée pour mission d’apporter une aide concrète et durable aux personnes les plus vulnérables. Depuis sa création, Don du Cœur œuvre sans relâche pour faire une différence tangible dans la vie de ceux qui en ont le plus besoin. <br> </p>
+<p>Notre engagement repose sur des valeurs fortes : l'entraide, la dignité humaine et l’espoir. Nous croyons qu’un simple geste peut tout changer, et que chaque individu mérite d’être soutenu dans les moments difficiles. À travers diverses actions de terrain, nous semons les graines d’un avenir plus équitable, où personne n’est laissé pour compte. <br></p>
+<p>Au cœur de notre action, ce sont les bénévoles qui insufflent l’énergie et la chaleur humaine qui caractérisent Don du Cœur. Grâce à leur dévouement, leur disponibilité et leur générosité, nous sommes en mesure d’intervenir efficacement, en adaptant notre aide aux besoins spécifiques de chaque situation. À leurs côtés, des partenaires institutionnels et privés nous apportent leur soutien logistique, financier et moral. <br></p>
+<p>Nos interventions sont variées : distribution alimentaire, aide vestimentaire, soutien scolaire, accompagnement psychologique, accès à la santé, et bien plus encore. Chaque projet est pensé avec soin, dans une logique de proximité et d’écoute, afin de garantir un impact réel et durable. Nous ne faisons pas que répondre à l’urgence ; nous construisons des solutions pour demain. <br></p>
+<p>Enfin, rien de tout cela ne serait possible sans votre générosité. Chaque don, aussi modeste soit-il, est une pierre précieuse à l’édifice de la solidarité. Grâce à votre soutien, nous transformons chaque geste en espoir, chaque contribution en changement. Ensemble, nous écrivons une histoire de compassion, de justice et d’humanité <br></p></strong>
+
         </p>
     </section>
     <section class="mission-section">
         <div class="mission">
           <h1>Notre mission</h1>
           <p> 
-            <strong> Notre mission est claire : favoriser l’engagement citoyen et amplifier l’impact social grâce au digital.<br>
-            Nous voulons rendre le don accessible, rapide et sécurisé, tout en assurant une transparence totale sur l’utilisation des fonds.<br>
-            Sur e-social, vous pouvez non seulement faire des dons en ligne, mais aussi suivre les projets financés, recevoir des mises à jour sur leur avancement, et vous sentir acteur du changement.</strong>
+            <strong><p>Notre mission est claire et ambitieuse : favoriser l’engagement citoyen et amplifier l’impact social grâce aux outils numériques. Dans un monde en constante évolution, où la technologie occupe une place centrale, nous croyons qu’elle peut devenir un levier puissant au service de la solidarité. C’est pourquoi nous avons choisi de mettre le digital au cœur de notre action. <br></p>
+
+<p>Nous souhaitons rendre le don plus accessible à tous, en quelques clics, depuis n’importe quel endroit. Grâce à une plateforme simple, rapide et sécurisée, chacun peut contribuer à une cause qui lui tient à cœur, sans contrainte. Notre objectif : que la solidarité ne soit plus freinée par des barrières techniques ou logistiques. <br></p>
+
+<p>La transparence est pour nous une valeur fondamentale. Chaque euro donné mérite d’être tracé avec rigueur. Sur notre plateforme e-social, les donateurs peuvent consulter l’utilisation exacte des fonds, suivre l’évolution des projets financés et constater par eux-mêmes l’impact de leur générosité. Cette confiance est le socle de notre relation avec la communauté. <br></p>
+
+<p>Plus qu’une simple plateforme de dons, e-social est un espace d’engagement. Les utilisateurs ont la possibilité de recevoir des mises à jour régulières sur les actions menées, de s’informer, de partager, et même de s’impliquer davantage en devenant ambassadeurs de nos causes. Nous voulons que chacun se sente pleinement acteur du changement. <br></p>
+
+<p>En unissant technologie et solidarité, nous construisons une nouvelle façon de s’engager, plus proche, plus directe, plus humaine. Ensemble, nous pouvons faire du digital un moteur de transformation sociale et redonner à chacun le pouvoir d’agir pour un monde plus juste. <br></p>
+</strong>
           </strong> </p>
         </div>
     
