Création de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -44,22 +44,24 @@
         </div>
     </section>
     <!-- DONS URGENTS-->
-    <section class="py-5 bg-light text-dark">
+    <section class="py-5 bg-light text-dark" id="dons-urgents">
         <div class="container">
-            <h2 class="text-center fw-bold text-success mb-4">DONS URGENTS</h2>
-            <P class="text-center mb-5">Nous avons urgemment besoin de votre soutien pour mener à bien nos missions humanitaires. Chaque jour, des femmes, des enfants, des familles entières comptent sur notre aide pour se nourrir, se soigner, s’éduquer ou tout simplement vivre dignement. Grâce à votre contribution, nous pouvons continuer à organiser des collectes de vivres, des dons de sang, distribuer des kits scolaires et construire un avenir plus solidaire.Agissons ensemble, maintenant. Votre générosité peut tout changer.</P>
-            <div class="row align-items-center">
-                <div class="col-md-6 mb-4 mb-md-0">
-                <img src="images/don-urgent.jpg" alt="" class="img-fluid rounded shadow">
-                <div class="col-md-6">
-                    <div class="p-4 bg-success text-white rounded shadow">
-                <h2 class="orange-title-underline mb-3">Appel à la Générosité</h2>
-                <p>Dans de nombreux daaras, les enfants talibés vivent dans des conditions précaires, souvent sans accès suffisant à des vêtements décents ou à une alimentation équilibrée. Face à cette réalité, nous lançons une grande opération de solidarité pour leur venir en aide</p>
-                <a href="#" class="btn btn-warning fw-bold mt-2">Je soutien ce projet</a>
+            <h2 class="text-center section-title">DONS URGENTS</h2>
+            <P class="text-center ">Nous avons urgemment besoin de votre soutien pour mener à bien nos missions humanitaires.<br>
+                Chaque jour, des femmes, des enfants, des familles entières comptent sur notre aide pour se nourrir, se soigner, s’éduquer ou tout simplement vivre dignement. <br>
+                 Grâce à votre contribution, nous pouvons continuer à organiser des collectes de vivres, des dons de sang, distribuer des kits scolaires et construire un avenir plus solidaire. <br>
+                      Agissons ensemble, maintenant. Votre générosité peut tout changer.</P>
+                      <div class="urgence-section mt-4">
+                          <img src="images/don-urgent.jpg" alt="" class="urgence-img">
+                    <div class="urgence-content">
+                       <h2 class="urgence-title">Appel à la Générosité</h2>
+                       <p>Dans de nombreux daaras, les enfants talibés vivent dans des conditions précaires, souvent sans accès suffisant à des vêtements décents ou à une alimentation équilibrée. Face à cette réalité, nous lançons une grande opération de solidarité pour leur venir en aide</p>
+                       <a href="#" class="btn urgence-btn ">Je soutien ce projet</a>
+                    </div>
                 </div>
                 </div>
-             </div>
             </div>
+             </section>
             <!-- MISSION -->
             <section class="py-5 bg-light">
                 <div class="container">
