--- a/index.html
+++ b/index.html
@@ -45,17 +45,26 @@
     </section>
     <!-- DONS URGENTS-->
     <section class="py-5 bg-light text-dark" id="dons-urgents">
-        <div class="container">
-            <h2 class="text-center section-title">DONS URGENTS</h2>
+        <div class="container mt-5">
+            <h2 class="section-title">DONS URGENTS</h2>
             <P class="text-center ">Nous avons urgemment besoin de votre soutien pour mener à bien nos missions humanitaires.<br>
-                Chaque jour, des femmes, des enfants, des familles entières comptent sur notre aide pour se nourrir, se soigner, s’éduquer ou tout simplement vivre dignement. <br>
-                 Grâce à votre contribution, nous pouvons continuer à organiser des collectes de vivres, des dons de sang, distribuer des kits scolaires et construire un avenir plus solidaire. <br>
+                Chaque jour, des femmes, des enfants, des familles entières comptent sur notre aide pour se nourrir, se <br>
+                                       soigner, s’éduquer ou tout simplement vivre dignement. <br>
+                 Grâce à votre contribution, nous pouvons continuer à organiser des collectes de vivres, des dons de sang,<br>
+                              distribuer des kits scolaires et construire un avenir plus solidaire. <br>
                       Agissons ensemble, maintenant. Votre générosité peut tout changer.</P>
-                      <div class="urgence-section mt-4">
-                          <img src="images/don-urgent.jpg" alt="" class="urgence-img">
-                    <div class="urgence-content">
+                      <div class="urgence-container">
+                        <div class="urgence-img">
+                          <img src="images/don-urgent.jpg" alt="">
+                        </div>
+                    <div class="urgence-text">
                        <h2 class="urgence-title">Appel à la Générosité</h2>
-                       <p>Dans de nombreux daaras, les enfants talibés vivent dans des conditions précaires, souvent sans accès suffisant à des vêtements décents ou à une alimentation équilibrée. Face à cette réalité, nous lançons une grande opération de solidarité pour leur venir en aide</p>
+                       <p>Dans de nombreux daaras, les enfants <br>
+                          talibés vivent dans des conditions <br>
+                          précaires, souvent sans accès suffisant à <br>
+                          des vêtements décents ou à une alimentation équilibrée. <br>
+                          Face à cette réalité, nous lançons une grande opération <br>
+                          de solidarité pour leur venir en aide</p>
                        <a href="#" class="btn urgence-btn ">Je soutien ce projet</a>
                     </div>
                 </div>
