Création de la page d-accueil

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                           des vêtements décents ou à une alimentation équilibrée. <br>
                           Face à cette réalité, nous lançons une grande opération <br>
                           de solidarité pour leur venir en aide</p>
-                       <a href="#" class="btn urgence-btn ">Je soutien ce projet</a>
+                       <a href="page-de-don.html" class="btn urgence-btn ">Je soutien ce projet</a>
                     </div>
                 </div>
                 </div>
@@ -76,8 +76,15 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-md-7 order-1">
-                    <h2 class="text-success fw-bold">NOTRE MISSION</h2>
-                    <P class="text-center">La mission de don du coeur est d'apporter une aide humanitaire efficace et humaine à toutes les personnes en détresses.Nous luttons contre l'exclusion social , la faim , l'isolement et injustice en agissant localement avec des bénévoles engagés.Nos actions reposent sur la solidarité , le respect de la dignité humaine et le transparence dans l'utilisation des ressources. </P>
+                    <h2 class="text-success ">NOTRE MISSION</h2>
+                    <P class="text-center">La mission de don du coeur est d'apporter une aide <br>
+                         humanitaire efficace et humaine à toutes les personnes en <br> 
+                                                 détresses.<br>
+                        Nous luttons contre l'exclusion social , la faim , l'isolement  <br>
+                        et injustice en agissant localement avec des bénévoles <br>
+                                                 engagés. <br>
+                        Nos actions reposent sur la solidarité , le respect de la dignité<br>
+                         humaine et le transparence dans l'utilisation des ressources. </P>
                     <div class="col-md-5 order-2">
                     <img src="images/mission.jpg" alt="" class="img-fluid rounded shadow">
                     </div>
@@ -89,66 +96,75 @@
             <Section class="bg-success text-white py-5 text-center">
                 <div class="container">
                     <h3>Pourquoi nous soutenir?</h3>
-                    <p>Parce que chaque action menée est un pas vers une société plus juste et plus humaine. 
-                       Votre soutien qu'il soit financier , matériel ou bénévole est éssentiel pour continuer nos projets.</p>
-                    <a href="#" class="btn btn-orange mt-4">Faire un don</a>
+                    <p>Parce que chaque action menée est un pas vers une société plus juste et plus <br>
+                           humaine.Votre soutien qu'il soit financier , matériel ou bénévole  <br>
+                                   est éssentiel pour continuer nos projets.</p>
+                    <a href="page-de-don.html" class="btn btn-orange mt-4">Faire un don</a>
                 </div>
             </Section>
             <!-- A PROPOS DE NOUS-->
             <section class="py-5">
                 <div class="container text-center">
                     <h3 class="text-warning">A propos de nous</h3>
-                    <p>Nous sommes une association engagée pour le bien-etre des communautés vulnérables.Grace a l'implication de nos bénévoles et donateurs, nous menons des actions concrétes pour améliorer le quotidien des personnes en situation de précarité. Notre mission: servir avec humanité, construire avec espoir.
-                    <div class=""></div></p>
+                    <p>Nous sommes une association engagée pour le bien-etre des communautés <br>
+                         vulnérables.Grace a l'implication de nos bénévoles et donateurs, nous <br>
+                        menons des actions concrétes pour améliorer le quotidien des personnes <br>
+                                           en situation de précarité. <br>
+                             Notre mission: servir avec humanité, construire avec espoir.
+                    </p>
                     <a href="#" class="btn btn-success">En savoir plus</a>
                 </div>
             </section>
             <!-- NOS ACTIONS -->
             <section class="py-5 bg-light">
-                <div class="container">
-                    <h3 class="text-center">Nos actions</h3>
-                    <div class="row text-center mt-4">
-                        <div class="col-md-3 mb-4">
-                            <div class="card">
-                                <div class="card-body">
-                                    <img src="images/kits-scolaire.jpg" alt="">
-                                    <h5>Collecte et distribution de kits scolaires</h5>
-                                    <p>Pour que chaque enfant ait la chance de réuissir a l'école.</p>
+                <div class="container-fluid px-5">
+                    <h3 class="section-titre">Nos actions</h3>
+                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
+                        <div class="col">
+                            <div class="action-card">
+                                 <img src="images/kits-scolaire.jpg"  class="action-img" alt="">
+                                <div class="action-body">
+                                    <div class="action-title">Collecte et distribution de kits scolaires</div>
+                                    <div class="action-desc">Pour que chaque enfant ait la chance de réuissir a l'école.</div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-               <div class="col-md-3 mb-4">
-                            <div class="card">
-                                <div class="card-body">
-                                    <img src="images/distribution-ndogou.jpg" alt="">
-                                    <h5>Distribution de ndogou pendant le Ramadan</h5>
-                                    <p>Pour permettre aux familles de rompre le jeune dignement et dans la solidarité.</p>
+                        <div class="col">
+                            <div class="action-card">
+                                 <img src="images/distribution-ndogou.jpg" class="action-img" alt="">
+                                <div class="action-body">
+                                    <div class="action-title">Distribution de ndogou pendant le Ramadan</div>
+                                    <div class="action-desc">Pour permettre aux familles de rompre le jeune dignement et dans la solidarité.</div>
                                 </div>
                            </div>
+                        </div>
                     </div>
-                     <div class="col-md-3 mb-4">
-                            <div class="card">
-                                <div class="card-body">
-                                    <img src="images/set-setal.jpg" alt="">
-                                    <h5>Organisation d'une journée de Set Setal</h5>
-                                    <p>Nous avons organisé une journée de nettoyage communautaire pour rendre notre quartier plus propre et agréable.</p>
+                     <div class="row row-cols-md-3 row-cols-lg-4 g-4">
+                         <div class="col">
+                            <div class="action-card">
+                                  <img src="images/set-setal.jpg" class="action-img" alt="">
+                                <div class="action-body">
+                                    <div class="action-title">Organisation d'une journée de Set Setal</div>
+                                    <div class="action-desc">Nous avons organisé une journée de nettoyage communautaire pour rendre notre quartier plus propre et agréable.</div>
+                                </div>
+                             </div>
+                         </div>
+                        <div class="col">
+                            <div class="action-card">
+                                  <img src="images/don-de-sang.jpg" class="action-img" alt="">
+                                <div class="action-body">
+                                    <div class="action-title">Organisation de dons de sang</div>
+                                    <div class="action-desc">En collaboration avec des structures sanitaires comme la Croix-Rouge et les hopitaux.</div>
                                 </div>
                            </div>
-                    </div>
-                     <div class="col-md-3 mb-4">
-                            <div class="card">
-                                <div class="card-body">
-                                    <img src="images/don-de-sang.jpg" alt="">
-                                    <h5>Organisation de dons de sang</h5>
-                                    <p>En collaboration avec des structures sanitaires comme la Croix-Rouge et les hopitaux.</p>
-                                </div>
-                           </div>
-                    </div>
-                    <div class="text-center">
-                        <a href="#" class="btn btn-success">En savoir plus</a>
-                    </div> 
+                        </div>
+                        </div>
+                        <div class="text-center">
+                          <a href="#" class="btn btn-success">En savoir plus</a>
+                         </div>
+                    
+        
+                </div> 
                </div>
             </section>
             <!-- DEMANDE DE DON -->
