Création de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -168,28 +168,47 @@
                </div>
             </section>
             <!-- DEMANDE DE DON -->
-            <section class="py-5 text-center">
-                <div class="container">
+            <section class="don-section">
+                <div class="don-box">
                     <h3>Besoin d'aide ?Faites une demande de don</h3>
-                    <p>Notre association est la pour vous accompagner dans les moments difficiles. Si vous traversez une période de précarité ou si vous connaissez quelqu'un dans le besoin , vous pouvez nous adresserune demande de don.</p>
-                    <a href="#"class="btn btn-orange">Faire une demande de don</a>
+                    <p>Notre association est la pour vous accompagner dans les moments <br>
+                         difficiles. Si vous traversez une période de précarité ou si vous <br>
+                         connaissez quelqu'un dans le besoin , vous pouvez nous adresser <br>
+                                             une demande de don.</p>
+                    <a href="#"class=" don-btn">Faire une demande de don</a>
                 </div>
                 <!-- REMERCIEMENT -->
-                <section class="py-5 bg-light text-center">
-                    <div class="container">
-                        <h4>Merci pour vos dons</h4>
-                        <p></p>
-                        <div class="row mt-3">
-                        <img src="images/don1.jpg" alt=""> 
-                        <img src="images/don2.jpg" alt="">
-                        <img src="images/don3.jpg" alt="">
-                        <img src="images/aide.jpg" alt="">
+                <section class="merci-section">
+                        <h4 class="merci-title">Merci pour vos dons</h4>
+                        <p class="merci-text">Ils ne comptent pas leurs heurs , ils ne demandent rien en retour. <br>
+                                       Nos bénévoles donnent le plus beau des cadeaux : leur générosité  <br>
+                                          illumine nos actions .Merci a chacun d'eux , aux quatre coins du monde.</p>
+                        <div class="merci-images">
+                        <img src="images/don1.jpg" alt="image-1"> 
+                        <img src="images/don2.jpg" alt="image-2">
+                        <img src="images/don3.jpg" alt="image-3">
+                        <img src="images/aide.jpg" alt="image-4">
                         </div>
                     </div>
                 </section>
             </section>
         </div>
     </section>
+    <!-- PARTENAIRE -->
+     <div class="collab-section">
+        <div class="container-fluid px-5">
+            <h2 class="collab-title">Nos collaborateurs</h2>
+            <div class="logo-bar">
+                    <img src="" alt="logo1" class="collab-logo">
+                    <img src="" alt="logo2" class="collab-logo">
+                    <img src="" alt="logo3" class="collab-logo">
+                    <img src="" alt="logo4" class="collab-logo">
+                    <img src="" alt="logo5" class="collab-logo">
+                    <img src="" alt="logo6" class="collab-logo">
+                    <img src="" alt="logo7" class="collab-logo">
+            </div>
+        </div>
+     </div>
 <!-- FOOTER -->
     <footer>
         <div class="row foot" style="background-color: #ff7f00;height: 200px;">
