--- a/index.html
+++ b/index.html
@@ -195,18 +195,18 @@
         </div>
     </section>
     <!-- PARTENAIRE -->
-     <div class="collab-section">
-        <div class="container-fluid px-5">
-            <h2 class="collab-title">Nos collaborateurs</h2>
-            <div class="logo-bar">
-                    <img src="" alt="logo1" class="collab-logo">
-                    <img src="" alt="logo2" class="collab-logo">
-                    <img src="" alt="logo3" class="collab-logo">
-                    <img src="" alt="logo4" class="collab-logo">
-                    <img src="" alt="logo5" class="collab-logo">
-                    <img src="" alt="logo6" class="collab-logo">
-                    <img src="" alt="logo7" class="collab-logo">
-            </div>
+     <div class=" py-5" style="background-color: #f9f9f9;">
+        <div class="container">
+            <h2 class="text-center fw-bold mb-4" style="color: #ff7f00; text-decoration: underline;">Nos collaborateurs</h2>
+                <div class="d-flex justify-content-between align-items-center flex-wrap gap-3">
+                    <img src="images/image-1.jpg" alt="logo1" class="img-fluid collab-logo">
+                    <img src="images/image-2.jpg" alt="logo2" class="img-fluid collab-logo">
+                    <img src="images/image-3.jpg" alt="logo3" class="img-fluid collab-logo">
+                    <img src="images/image-4.jpg" alt="logo4" class="img-fluid collab-logo">
+                    <img src="images/image-5.jpg" alt="logo5" class="img-fluid collab-logo">
+                    <img src="images/image-6.jpg" alt="logo6" class="img-fluid collab-logo">
+                    <img src="images/image-7.jpg" alt="logo7" class="img-fluid collab-logo">
+                </div>
         </div>
      </div>
 <!-- FOOTER -->
