--- a/Nosprojets.html
+++ b/Nosprojets.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="Nosprojets.css">
     <link rel="icon" type="image/jpg" href="images/favicon_Plan de travail 1.jpeg.jpeg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>Page Nos projet</title>
 </head>
 
@@ -41,7 +42,7 @@
                 <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
                     <h3 class="green-title">Payement ordonnance</h3>
                     <p class="card-text">Nous nous engageons à aider les personnes en difficulté en prenant en charge le paiement de leurs ordonnances médicales ou de leurs soins hospitaliers, car la santé ne devrait jamais être un luxe</p>
-                    <a href="page-de-don.html" class="btn btn-warning" style="background-color: #ff7f00; border-color: #ff7f00; color: white; border-radius: 25px;">Soutenir</a>
+                    <a href="page-de-don.html" class="btn btn-warning" style="background-color: #ff7f00; border-color: #ff7f00; color: white; border-radius: 25px;">je soutiens ce projet</a>
                 </div>
             </div>
         </div>
@@ -52,7 +53,7 @@
                 <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
                     <h3 class="green-title">collecte de vêtements</h3>
                     <p class="card-text">Nous organisons cette collecte pour soutenir les daaras, afin d'assurer que chaque enfant ait accès à des vêtements appropriés.un vêtement propre et adapter peut transformer la perception d'un enfants</p>
-                    <a href="page-de-don.html" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">Soutenir</a>
+                    <a href="page-de-don.html" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">je soutiens ce projet</a>
                 </div>
             </div>
         </div>
@@ -64,7 +65,7 @@
                 <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
                     <h3 class="green-title">Construction d’une espace de jeux  </h3>
                     <p class="card-text">Nous projetons de construire un espace de jeux sécurisé et accueillant pour les enfants, afin de leur offrir un lieu où ils peuvent s'amuser, apprendre et se développer en toute sécurité.</p>
-                    <a href="page-de-don.html" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">Soutenir</a>
+                    <a href="page-de-don.html" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">je soutiens ce projet</a>
                 </div>
             </div>
         </div>
@@ -79,7 +80,7 @@
                 <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
                     <h3 class="green-title">Consultation gratuit</h3>
                     <p class="card-text">Nous offrons une journée de consultation gratuite pour permettre à tous d'accéder à des soins médicaux de qualité, sans barrière financière, et de promouvoir le bien-être de notre communauté.</p>
-                    <a href="page-de-don.html" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">Soutenir</a>                </div>
+                    <a href="page-de-don.html" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">je soutiens ce projet</a>                </div>
             </div>
         </div>
 
@@ -89,8 +90,8 @@
                 <img src="images/istockphoto-1372606877-612x612.webp" class="card-img-top" alt="Formations"style="border-radius: 45px 45px 0 0;">
                 <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
                     <h3 class="green-title">Formations gratuites</h3>
-                    <p class="card-text">"La connaissance est un droit, pas un privilège. C'est pourquoi<strong> Don du coeur </strong> s'engage à offrir des formations gratuites à des jeunes défavorisés,pour leur permettre de développer leurs compétences et de construire un avenir meilleur.</p>
-                    <a href="page-de-don.html" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">Soutenir</a>
+                    <p class="card-text">La connaissance est un droit, pas un privilège. C'est pourquoi<strong> Don du coeur </strong> s'engage à offrir des formations gratuites à des jeunes défavorisés,pour leur permettre de développer leurs compétences et de construire un avenir meilleur.</p>
+                    <a href="page-de-don.html" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">je soutiens ce projet</a>
                 </div>
             </div>
         </div>
@@ -102,7 +103,7 @@
                 <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
                     <h3 class="green-title">Événements solidaires</h3>
                     <p class="card-text">Nous avons besoin de votre cœur et de votre générosité pour réaliser un rêve : construire une Maison des Enfants chaleureuse et accueillante pour les enfants défavorisés de notre communauté.</p>
-                    <a href="page-de-don.html" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">Soutenir</a>
+                    <a href="page-de-don.html" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">je soutiens ce projet</a>
                 </div>
             </div>
         </div>
@@ -279,13 +280,13 @@
                 <p class="p-footer">+221 33 900 00 00</p>
                 <p class="p-footer">donducoeur@gmail.com</p>
                 <h4>Suivez nous sur</h4>
-            <img src="images/icone-sociaux_Plan de travail 1.jpg" alt="">
-            </div> 
-        </div>
-        <div class="footer-bottom" style="background-color: #ff7f00;">
-            <div class="col text-center">
-                <p class="text-center">© 2025 Don du Coeur. Tous droits réservés.</p>
-            </div>
+            <div class="socials">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
+    </div>
+    </div>
             
     </footer>
     
