--- a/index.html
+++ b/index.html
@@ -72,23 +72,21 @@
             </div>
              </section>
             <!-- MISSION -->
-            <section class="py-5 bg-light">
+            <section class="py-5 bg-white" id="mission">
                 <div class="container">
                     <div class="row align-items-center">
-                        <div class="col-md-7 order-1">
-                    <h2 class="text-success ">NOTRE MISSION</h2>
-                    <P class="text-center">La mission de don du coeur est d'apporter une aide <br>
-                         humanitaire efficace et humaine à toutes les personnes en <br> 
-                                                 détresses.<br>
+                      <div class="col-md-6">
+                        <h2 class="mission-title ">NOTRE MISSION</h2>
+                        <p class="mission-text">La mission de don du coeur est d'apporter une aide <br>
+                         humanitaire efficace et humaine à toutes les personnes en <br>détresses.<br>
                         Nous luttons contre l'exclusion social , la faim , l'isolement  <br>
-                        et injustice en agissant localement avec des bénévoles <br>
-                                                 engagés. <br>
+                        et injustice en agissant localement avec des bénévoles <br> engagés. <br>
                         Nos actions reposent sur la solidarité , le respect de la dignité<br>
-                         humaine et le transparence dans l'utilisation des ressources. </P>
-                    <div class="col-md-5 order-2">
-                    <img src="images/mission.jpg" alt="" class="img-fluid rounded shadow">
-                    </div>
-                    </div>
+                         humaine et le transparence dans l'utilisation des ressources. </p>
+                      </div>
+                      <div class="col-md-6 text-center">
+                          <img src="images/mission.jpg" alt="" class="img-fluid rounded ">
+                      </div>
                     </div>
                 </div>
             </section>
@@ -162,9 +160,7 @@
                         <div class="text-center">
                           <a href="#" class="btn btn-success">En savoir plus</a>
                          </div>
-                    
-        
-                </div> 
+                   </div> 
                </div>
             </section>
             <!-- DEMANDE DE DON -->
