--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="banner">
         <div class="banner-content container">
             <h1 class="display-5 fw-bold text-orange">Bienvenue sur Don Du Coeur</h1>
-            <p class="lead">Ensemble, semons la solidarité et récoltons l'espoir.</p>
+            <p class="subtitle">Ensemble, semons la solidarité et récoltons l'espoir.</p>
             <div class="container position-relative z-2">
             <div class="row justify-content-center g-0 stat-row">
                 <div class="col-md-3 stat-box step-1 text-center">
@@ -47,7 +47,7 @@
     <section class="py-5 bg-light text-dark" id="dons-urgents">
         <div class="container mt-5">
             <h2 class="section-title">DONS URGENTS</h2>
-            <P class="text-center ">Nous avons urgemment besoin de votre soutien pour mener à bien nos missions humanitaires.<br>
+            <P class="section-text1 ">Nous avons urgemment besoin de votre soutien pour mener à bien nos missions humanitaires.<br>
                 Chaque jour, des femmes, des enfants, des familles entières comptent sur notre aide pour se nourrir, se <br>
                                        soigner, s’éduquer ou tout simplement vivre dignement. <br>
                  Grâce à votre contribution, nous pouvons continuer à organiser des collectes de vivres, des dons de sang,<br>
@@ -58,14 +58,16 @@
                           <img src="images/don-urgent.jpg" alt="">
                         </div>
                     <div class="urgence-text">
-                       <h2 class="urgence-title">Appel à la Générosité</h2>
-                       <p>Dans de nombreux daaras, les enfants <br>
+                        <div class="contenu-text">
+                          <h2 class="urgence-title">Appel à la Générosité</h2>
+                          <p>Dans de nombreux daaras, les enfants <br>
                           talibés vivent dans des conditions <br>
                           précaires, souvent sans accès suffisant à <br>
                           des vêtements décents ou à une alimentation équilibrée. <br>
                           Face à cette réalité, nous lançons une grande opération <br>
                           de solidarité pour leur venir en aide</p>
-                       <a href="page-de-don.html" class="btn urgence-btn ">Je soutien ce projet</a>
+                          <a href="page-de-don.html" class="btn urgence-btn ">Je soutien ce projet</a>
+                        </div>
                     </div>
                 </div>
                 </div>
@@ -76,8 +78,8 @@
                 <div class="container">
                     <div class="row align-items-center">
                       <div class="col-md-6">
-                        <h2 class="mission-title ">NOTRE MISSION</h2>
-                        <p class="mission-text">La mission de don du coeur est d'apporter une aide <br>
+                        <h2 class="mission-title text-center">NOTRE MISSION</h2>
+                        <p class="mission-text text-center">La mission de don du coeur est d'apporter une aide <br>
                          humanitaire efficace et humaine à toutes les personnes en <br>détresses.<br>
                         Nous luttons contre l'exclusion social , la faim , l'isolement  <br>
                         et injustice en agissant localement avec des bénévoles <br> engagés. <br>
@@ -91,10 +93,10 @@
                 </div>
             </section>
             <!-- POURQUOI NOUS SOUTENIR -->
-            <Section class="bg-success text-white py-5 text-center">
+            <Section class=" py-5 bg-section" id="soutien">
                 <div class="container">
-                    <h3>Pourquoi nous soutenir?</h3>
-                    <p>Parce que chaque action menée est un pas vers une société plus juste et plus <br>
+                    <h3 class="soutien-title text-center">Pourquoi nous soutenir?</h3>
+                    <p class="soutien-text text-center">Parce que chaque action menée est un pas vers une société plus juste et plus <br>
                            humaine.Votre soutien qu'il soit financier , matériel ou bénévole  <br>
                                    est éssentiel pour continuer nos projets.</p>
                     <a href="page-de-don.html" class="btn btn-orange mt-4">Faire un don</a>
@@ -104,7 +106,7 @@
             <section class="py-5">
                 <div class="container text-center">
                     <h3 class="text-warning">A propos de nous</h3>
-                    <p>Nous sommes une association engagée pour le bien-etre des communautés <br>
+                    <p class="about-text">Nous sommes une association engagée pour le bien-etre des communautés <br>
                          vulnérables.Grace a l'implication de nos bénévoles et donateurs, nous <br>
                         menons des actions concrétes pour améliorer le quotidien des personnes <br>
                                            en situation de précarité. <br>
@@ -114,47 +116,48 @@
                 </div>
             </section>
             <!-- NOS ACTIONS -->
-            <section class="py-5 bg-light">
-                <div class="container-fluid px-5">
-                    <h3 class="section-titre">Nos actions</h3>
-                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
-                        <div class="col">
+            <section class="py-5 bg-light" id="actions">
+                <div class="container-action">
+                    <h3 class="text-center text-danger fw-bold mb-4 text-decoration-underline">Nos actions</h3>
+                    <div class="row g-4">
+                        <div class="col-md-6">
                             <div class="action-card">
                                  <img src="images/kits-scolaire.jpg"  class="action-img" alt="">
                                 <div class="action-body">
-                                    <div class="action-title">Collecte et distribution de kits scolaires</div>
-                                    <div class="action-desc">Pour que chaque enfant ait la chance de réuissir a l'école.</div>
+                                    <h5>Collecte et distribution de kits scolaires</h5>
+                                    <p>Pour que chaque enfant ait la chance de réuissir a l'école.</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col-md-6">
                             <div class="action-card">
                                  <img src="images/distribution-ndogou.jpg" class="action-img" alt="">
                                 <div class="action-body">
-                                    <div class="action-title">Distribution de ndogou pendant le Ramadan</div>
-                                    <div class="action-desc">Pour permettre aux familles de rompre le jeune dignement et dans la solidarité.</div>
+                                    <h5>Distribution de ndogou pendant le Ramadan</h5>
+                                    <p>Pour permettre aux familles de rompre le jeune dignement et dans la solidarité.</p>
                                 </div>
                            </div>
                         </div>
                     </div>
-                     <div class="row row-cols-md-3 row-cols-lg-4 g-4">
-                         <div class="col">
+                     <div class="row g-4">
+                         <div class="col-md-6">
                             <div class="action-card">
                                   <img src="images/set-setal.jpg" class="action-img" alt="">
                                 <div class="action-body">
-                                    <div class="action-title">Organisation d'une journée de Set Setal</div>
-                                    <div class="action-desc">Nous avons organisé une journée de nettoyage communautaire pour rendre notre quartier plus propre et agréable.</div>
+                                    <h5>Organisation d'une journée de Set Setal</h5>
+                                    <p>Nous avons organisé une journée de nettoyage communautaire pour rendre notre quartier plus propre et agréable.</p>
                                 </div>
                              </div>
                          </div>
-                        <div class="col">
+                        <div class="col-md-6">
                             <div class="action-card">
                                   <img src="images/don-de-sang.jpg" class="action-img" alt="">
                                 <div class="action-body">
-                                    <div class="action-title">Organisation de dons de sang</div>
-                                    <div class="action-desc">En collaboration avec des structures sanitaires comme la Croix-Rouge et les hopitaux.</div>
+                                    <h5>Organisation de dons de sang</h5>
+                                    <p>En collaboration avec des structures sanitaires comme la Croix-Rouge et les hopitaux.</p>
                                 </div>
                            </div>
+                        </div>
                         </div>
                         </div>
                         <div class="text-center">
@@ -165,7 +168,7 @@
             </section>
             <!-- DEMANDE DE DON -->
             <section class="don-section">
-                <div class="don-box">
+                <div class="don-overlay" >
                     <h3>Besoin d'aide ?Faites une demande de don</h3>
                     <p>Notre association est la pour vous accompagner dans les moments <br>
                          difficiles. Si vous traversez une période de précarité ou si vous <br>
@@ -191,18 +194,33 @@
         </div>
     </section>
     <!-- PARTENAIRE -->
-     <div class=" py-5" style="background-color: #f9f9f9;">
-        <div class="container">
-            <h2 class="text-center fw-bold mb-4" style="color: #ff7f00; text-decoration: underline;">Nos collaborateurs</h2>
-                <div class="d-flex justify-content-between align-items-center flex-wrap gap-3">
-                    <img src="images/image-1.jpg" alt="logo1" class="img-fluid collab-logo">
-                    <img src="images/image-2.jpg" alt="logo2" class="img-fluid collab-logo">
-                    <img src="images/image-3.jpg" alt="logo3" class="img-fluid collab-logo">
-                    <img src="images/image-4.jpg" alt="logo4" class="img-fluid collab-logo">
-                    <img src="images/image-5.jpg" alt="logo5" class="img-fluid collab-logo">
-                    <img src="images/image-6.jpg" alt="logo6" class="img-fluid collab-logo">
-                    <img src="images/image-7.jpg" alt="logo7" class="img-fluid collab-logo">
-                </div>
+     <div class="container my-5">
+            <h2 class="text-center text-orange">Nos collaborateurs</h2>
+                <div class="underline-white mb-4"></div>
+                    <div id="carousellogos" class="carousel slide" data-bs-ride="carousel">
+                       <div class="carouls-inner text-center">
+                         <div class="carousel-item active">
+                            <img src="images/image-1.jpg" alt="logo1" class="logo-img mx-2">
+                            <img src="images/image-2.jpg" alt="logo2" class="logo-img mx-2">
+                            <img src="images/image-3.jpg" alt="logo3" class="logo-img mx-2">
+                         </div>
+                         <div class="carousel-item">
+                             <img src="images/image-4.jpg" alt="logo4" class="logo-img mx-2">
+                             <img src="images/image-5.jpg" alt="logo5" class="logo-img mx-2">
+                             <img src="images/image-6.jpg" alt="logo6" class="logo-img mx-2">
+                          </div>
+                          <div class="carousel-item">
+                             <img src="images/image-7.jpg" alt="logo7" class="logo-img mx-2">
+                             <img src="images/image-8.jpg" alt="logo8" class="logo-img mx-2">
+                          </div>
+                       </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousellogos" data-bs-slide="prev">
+                       <span class="carousel-control-prev-icon"></span>
+                    </button> 
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousellogos" data-bs-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </button> 
         </div>
      </div>
 <!-- FOOTER -->
@@ -210,8 +228,10 @@
         <div class="row foot" style="background-color: #ff7f00;height: 200px;">
             <div class="col">
                 <img src="images/don-du-coeur.jpg" alt="" class="logo-footer">
-                <p class="texte-footer">Notre equipe s’engage à vous apporter leurs plus grand soutien chaque demande
-                    sera traitée avec attention, confidentialité et humanité.</p>
+                <p class="texte-footer">Notre equipe s’engage à vous apporter <br>
+                    leurs plus grand soutien chaque demande <br>
+                    sera traitée avec attention, confidentialité <br>
+                    et humanité.</p>
             </div>
             <div class="col">
                 <h4>LIENS UTILES</h4>
