--- a/Nosprojets.html
+++ b/Nosprojets.html
@@ -29,10 +29,10 @@
     <div class="title-underline"></div>
     
     <!-- Texte d'introduction -->
-    <div class="intro-text px-4">
-        <p> Transformez votre générosité en<strong> miracles du quotidien</strong> avec <strong>Don du Cœur</strong></p>
+    <div class="intro-text px-4 text-center">
+        <p><strong> Transformez votre générosité en miracles du quotidien avec Don du Cœur
         Chaque projet que nous menons répond à un besoin pressant au sein de notre communauté. Que ce soit pour améliorer la santé, favoriser l'éducation ou restaurer la dignité, votre soutien se transforme en actions concrètes : un médicament qui guérit, un vêtement qui apporte chaleur, une formation qui ouvre des horizons.
-        Découvrez nos initiatives et choisissez celle qui résonne le plus avec votre cœur. Chaque geste compte, et chaque don a le potentiel de changer des vies. Ensemble, créons un impact positif !</p>
+        Découvrez nos initiatives et choisissez celle qui résonne le plus avec votre cœur. Chaque geste compte, et chaque don a le potentiel de changer des vies. Ensemble, créons un impact positif !</strong></p>
 </div>
 
     <div class="row g-4">
@@ -41,8 +41,8 @@
     <div class="card project-card h-100 border-0"style="font-size:18px;">
         <img src="images/payement ordonnance.jpeg" class="card-img-top" alt="Payement ordonnance">
         <div class="card-body text-center">
-            <h3 class="green-title">Payement ordonnance</h3>
-            <p class="card-text">Nous nous engageons à aider les personnes en difficulté en prenant en charge le paiement de leurs ordonnances médicales, car la santé ne devrait jamais être un luxe. Ensemble, nous pouvons faire la différence.</p>
+            <h3 class="green-title">Payement ordonnance une femme dans le besoin</h3>
+            <p class="card-text">Nous nous engageons à aider les personnes en difficulté en prenant en charge le paiement de leurs ordonnances médicales, car la santé ne devrait jamais être un luxe.</p>
             <a href="page-de-don.html" class="btn btn-warning">Je soutiens ce projet</a>
         </div>
     </div>
@@ -53,8 +53,8 @@
            <div class="card project-card h-100 border-0" style="border-radius: 15px; overflow: hidden;font-size: 18px;">
                 <img src="images/collecte vetement.jpeg" class="card-img-top" alt="collecte vetement"style="border-radius: 45px 45px 0 0;">
                 <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
-                    <h3 class="green-title text-center">Collecte de vêtements</h3>
-                    <p class="card-text">Nous organisons cette collecte pour soutenir les daaras, afin d'assurer que chaque enfant ait accès à des vêtements appropriés.un vêtement propre et adapter peut transformer la perception d'un enfants</p>
+                    <h3 class="green-title text-center">Collecte de vêtements pour les daaras</h3>
+                    <p class="card-text text-center">Nous organisons cette collecte pour soutenir les daaras, afin d'assurer que chaque enfant ait accès à des vêtements appropriés.un vêtement propre peut transformer leur perception.</p>
                     <div class="text-center">
                     <a href="page-de-don.html" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">je soutiens ce projet</a>
                 </div>
@@ -68,7 +68,7 @@
                 <img src="images/construction.jpeg" class="card-img-top" alt=" Construction d’une espace de jeux"style="border-radius: 45px 45px 0 0;">
                 <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
                     <h3 class="green-title text-center">Construction d’une espace de jeux  </h3>
-                    <p class="card-text">Nous projetons de construire un espace de jeux sécurisé pour offrir aux enfants un lieu d'apprentissage et de développement.Chaque enfant mérite un endroit où rêver et grandir.</p>
+                    <p class="card-text text-center">Nous projetons de construire un espace de jeux sécurisé pour offrir aux enfants un lieu d'apprentissage et de développement.Chaque enfant mérite un endroit où rêver et grandir.</p>
                     <div class="text-center">
                     <a href="page-de-don.html" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">je soutiens ce projet</a>
                 </div>
@@ -85,7 +85,7 @@
                 <img src="images/consultation gratuit.jpeg" class="card-img-top" alt="Consultation gratuit"style="border-radius: 45px 45px 0 0;">
                 <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
                    <h3 class="green-title text-center">Consultation gratuit</h3>
-                    <p class="card-text">Nous offrons une journée de consultation gratuite pour permettre à tous d'accéder à des soins médicaux de qualité, sans barrière financière, et de promouvoir le bien-être de notre communauté.Votre santé est notre priorité.</p>
+                    <p class="card-text text-center">Nous offrons une journée de consultation gratuite pour permettre à tous d'accéder à des soins médicaux de qualité, sans barrière financière, et de promouvoir le bien-être de notre communauté.</p>
                     <div class="text-center">
                     <a href="page-de-don.html" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">je soutiens ce projet</a>                </div>
             </div>
@@ -98,7 +98,7 @@
                 <img src="images/istockphoto-1372606877-612x612.webp" class="card-img-top" alt="Formations"style="border-radius: 45px 45px 0 0;">
                 <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
                     <h3 class="green-title text-center">Formations gratuites</h3>
-                    <p class="card-text">La connaissance est un droit, pas un privilège. C'est pourquoi<strong> Don du coeur </strong> s'engage à offrir des formations gratuites à des jeunes défavorisés,pour leur permettre de développer leurs compétences et de construire un avenir meilleur.</p>
+                    <p class="card-text text-center">La connaissance est un droit, pas un privilège. C'est pourquoi<strong> Don du coeur </strong> s'engage à offrir des formations gratuites à des jeunes défavorisés afin de construire un avenir meilleur.</p>
                     <div class="text-center">
                     <a href="page-de-don.html" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">je soutiens ce projet</a>
                 </div>
@@ -112,7 +112,7 @@
                 <img src="images/evenement.webp" class="card-img-top" alt="Événement solidaire"style="border-radius: 45px 45px 0 0;">
                 <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
                     <h3 class="green-title text-center">Événements solidaires</h3>
-                    <p class="card-text">Nous avons besoin de votre cœur et de votre générosité pour réaliser un rêve : construire une Maison des Enfants chaleureuse et accueillante pour les enfants défavorisés de notre communauté.</p>
+                    <p class="card-text text-center">Nous avons besoin de votre cœur et de votre générosité pour réaliser un rêve : construire une Maison des Enfants chaleureuse et accueillante pour les enfants défavorisés de notre communauté.</p>
                     <div class="text-center">
                     <a href="page-de-don.html" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">je soutiens ce projet</a>
                 </div>
@@ -131,9 +131,9 @@
     <div class="title-underline1"></div>
     
     <!-- Texte d'introduction -->
-    <div class="intro-text px-4">
-         <p> <strong>Découvrez comment nous transformons la solidarité en actions concrètes </strong></p>
-        <p>Chaque don, chaque geste, chaque sourire partagé illumine la vie de ceux qui en ont le plus besoin. Ensemble, nous ne donnons pas seulement de l'argent ou des objets - nous offrons de l'espoir, de la dignité et un avenir radieux. Rejoignez notre communauté de héros du quotidien et découvrez le pouvoir extraordinaire de la solidarité !</p>
+    <div class="intro-text px-4 text-center">
+         <p> <strong>Découvrez comment nous transformons la solidarité en actions concrètes 
+        Chaque don, chaque geste, chaque sourire partagé illumine la vie de ceux qui en ont le plus besoin. Ensemble, nous ne donnons pas seulement de l'argent ou des objets - nous offrons de l'espoir, de la dignité et un avenir radieux. Rejoignez notre communauté de héros du quotidien et découvrez le pouvoir extraordinaire de la solidarité !</strong></p>
     </div>
        <div class="container-fluid">
     <!-- Action 1 : Soutien aux femmes -->
@@ -146,8 +146,8 @@
                        </div>
                     <div class="col-md-6">
                         <div class="action-content">
-                            <h3 class="green-title">Collecte de fond</h3>
-                            <p class="green-text"style="font-size: 20px; line-height: 1.8;">
+                            <h3 class="green-title"style="padding-top:30px">Collecte de fond</h3>
+                            <p class="green-text text-center"style="font-size: 20px; line-height: 1.8;">
                                 Grâce à la mobilisation des bonnes volontes, nous avons réussi à collecter des fonds destinés à soutenir les femmes en situation de précarité. Cette aide financière leur a permis de couvrir des besoins essentiels tels que la santé, l’alimentation, ou encore l’éducation de leurs enfants. 
                                 </p>
 </div>
@@ -188,9 +188,9 @@
                     </div>
                     <div class="col-md-6">
                         <div class="action-content">
-                            <h3 class="green-title">Collecte de kits scolaire</h3>
-                            <p class="action-text"style="font-size: 20px; line-height: 1.8;">
-                               Afin de favoriser l’égalité des chances dès le plus jeune âge, nous avons lancé une collecte solidaire de kits scolaires à destination des enfants issus de milieux défavorisés. Grâce à la générosité de nos donateurs et à l’engagement de nos bénévoles, des centaines d’élèves ont pu recevoir des fournitures complètes leur permettant d’aborder l’année scolaire avec confiance et dignité. 
+                            <h3 class="green-title"style="padding-top:30px">Collecte de kits scolaire</h3>
+                            <p class="action-text text-center"style="font-size: 20px; line-height: 1.8;">
+                               Afin de favoriser l’égalité des chances dès le plus jeune âge, nous avons lancé une collecte solidaire de kits scolaires à destination des enfants issus de milieux défavorisés. Grâce à la générosité de nos donateurs et à l’engagement de nos bénévoles, des centaines d’élèves ont pu recevoir des fournitures complètes leur permettant d’aborder l’année scolaire. 
                                </p>
                         </div>
                     </div>
@@ -208,7 +208,7 @@
                         <div class="green-section h-100 d-flex flex-column justify-content-center">
                             <h3 class="green-title">Distribution de ndogou pendant le Ramadan</h3>
                             <p class="green-text"style="font-size: 20px; line-height: 1.8;">
-                               Durant ce mois, nous avons mis en place une opération de distribution de repas à destination des familles démunies.Ce geste symbolique incarne l’esprit de partage et de fraternité qui anime notre engagement.
+                               Durant ce mois, nous avons mis en place une opération de distribution de repas à destination des familles démunies.Ce geste symbolique incarne l’esprit de partage et de fraternité qui anime notre engagement.Chaque repas distribué représente un moment de réconfort et un pas vers plus de dignité.
                                </p>
                         </div>
                     </div>
@@ -229,7 +229,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="action-content">
-                            <h3 class="green-title">Collecte de ravitaillement</h3>
+                            <h3 class="green-title"style="padding-top:30px">Collecte de ravitaillement</h3>
                             <p class="action-text"style="font-size: 20px; line-height: 1.8;">
                               Grâce au soutien indéfectible de nos généreux donateurs et à la mobilisation constante de nos équipes bénévoles, nous avons pu mettre en place une vaste opération de distribution de denrées alimentaires. Cette initiative a permis à de nombreuses familles en situation de précarité de subvenir à leurs besoins essentiels.
                               </p>
@@ -248,7 +248,7 @@
                         <div class="green-section h-100 d-flex flex-column justify-content-center">
                             <h3 class="green-title">Organisation d’une journee Set Setal</h3>
                             <p class="green-text"style="font-size: 20px; line-height: 1.8;">
-                               Nous avons organisé une journée de nettoyage communautaire pour rendre notre quartier plus propre et agréable. Merci à tous les bénévoles pour leur engagement et leurénergie.
+                               Nous avons organisé une journée de nettoyage communautaire pour rendre notre quartier plus propre et agréable. Merci à tous les bénévoles pour leur engagement et leur énergie.Cette initiative a permis de rassembler les habitants autour d'un objectif commun renforçant ainsi les liens sociaux. 
                                </p>
                         </div>
                     </div>
